--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "react-select": "^1.0.0-rc.2",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.2",
-    "react-virtualized": "^7.23.0",
+    "react-virtualized": "^8.11.1",
     "redbox-react": "^1.0.1",
     "rimraf": "^2.4.3",
     "standard": "^5.4.1",
@@ -120,8 +120,8 @@
   },
   "dependencies": {
     "babel-runtime": "^6.11.6",
-    "react-select": "^1.0.0-beta14",
-    "react-virtualized": "^8.0.5"
+    "react-select": "^1.0.0-rc.1",
+    "react-virtualized": "^8.11.1"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0",
