--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "babel-plugin-typecheck": "^3.6.1",
     "babel-polyfill": "^6.5.0",
     "babel-preset-es2015": "^6.5.0",
-    "babel-preset-es2015-rollup": "^1.1.1",
+    "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "bluebird": "^3.0.5",
@@ -102,6 +102,7 @@
     "postcss": "^5.0.14",
     "postcss-cli": "^2.3.3",
     "postcss-loader": "^0.8.0",
+    "q-io": "^1.13.2",
     "react": "^15.2.1",
     "react-addons-shallow-compare": "^15.2.1",
     "react-addons-test-utils": "^15.2.1",
@@ -120,7 +121,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.11.6",
-    "react-select": "^1.0.0-rc.1",
+    "react-select": "1.0.0-rc.2",
     "react-virtualized": "^8.11.1"
   },
   "peerDependencies": {
